--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
         <img class="img2" src="./images/dice6.png">
       </div>
 
+    </div>ytytys  
+
+    <div class="button-container">
+      <button type="button" id="playButton">Play</button>
+      <button type="button" id="resetButton">Reset</button>
     </div>
 
     <script src="index.js" charset="utf-8"></script>
